--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@nextui-org/link": "2.0.34",
 		"@nextui-org/listbox": "2.1.25",
 		"@nextui-org/navbar": "2.0.36",
+		"@nextui-org/react": "^2.4.6",
 		"@nextui-org/snippet": "2.0.41",
 		"@nextui-org/switch": "2.0.33",
 		"@nextui-org/system": "2.2.5",
@@ -31,12 +32,14 @@
 		"@solana/wallet-adapter-wallets": "^0.19.32",
 		"@solana/web3.js": "^1.95.2",
 		"clsx": "2.1.1",
-		"framer-motion": "~11.1.1",
+		"framer-motion": "^11.3.19",
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
-		"react-dom": "18.3.1"
+		"react-clipboardjs-copy": "^2.0.2",
+		"react-dom": "18.3.1",
+		"react-feather": "^2.0.10"
 	},
 	"devDependencies": {
 		"@types/node": "20.5.7",
