--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"clsx": "2.1.1",
 		"framer-motion": "^11.3.19",
 		"intl-messageformat": "^10.5.0",
+		"moralis": "^2.27.1",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
