--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@drift-labs/snap-wallet-adapter": "^0.3.0",
 		"@emotion/react": "^11.13.0",
 		"@emotion/styled": "^11.13.0",
+		"@moralisweb3/common-sol-utils": "^2.27.2",
 		"@nextui-org/button": "2.0.37",
 		"@nextui-org/code": "2.0.32",
 		"@nextui-org/input": "2.2.4",
