--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"moralis": "^2.27.1",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
+		"qrcode.react": "^3.1.0",
 		"react": "18.3.1",
 		"react-clipboardjs-copy": "^2.0.2",
 		"react-dom": "18.3.1",
